chore(updatecli) fix manifests for 0.36.x
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/updatecli.d/updatecli.yaml
+++ b/updatecli/updatecli.d/updatecli.yaml
@@ -1,4 +1,5 @@
-title: "Update updatecli version"
+---
+name: Update updatecli version
 
 scms:
   default:
@@ -21,7 +22,7 @@ sources:
       repository: "updatecli"
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
-      versionFilter:
+      versionfilter:
         kind: semver
 
 conditions:
@@ -46,5 +47,8 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - setUpdatecliVersion
+    title: Update updatecli version to {{ source "latestUpdatecliVersion" }}
+    spec:
+      labels:
+        - dependencies
+        - updatecli
