--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
       <url>https://repo.jenkins-ci.org/releases/</url>
     </repository>
   </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>jenkins-ci-releases</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </pluginRepository>
+  </pluginRepositories>
   <build>
     <resources>
       <resource>
