--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
       <url>https://repo.jenkins-ci.org/releases/</url>
     </repository>
   </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>jenkins-ci-releases</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </pluginRepository>
+  </pluginRepositories>
   <build>
     <resources>
       <resource>
@@ -90,7 +96,7 @@
               <include>**/*.groovy</include>
             </includes>
             <greclipse>
-              <file>${maven.multiModuleProjectDirectory}/src/spotless/greclipse.properties</file>
+              <file>config/greclipse.properties</file>
             </greclipse>
           </groovy>
           <pom>
@@ -102,6 +108,13 @@
             </sortPom>
           </pom>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>io.jenkins.lib</groupId>
+            <artifactId>shared-resources</artifactId>
+            <version>1.0</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <!-- Runs in verify phase by default -->
