feat(buildDockerAndPublishImage): allow to specify a target when using docker bake (#822)
* feat(buildDockerAndPublishImage): allow to specify a target when using docker bake

* allow cst to test a specific tag of an image

* allow cst to test a specific tag of an image

* Update vars/buildDockerAndPublishImage.txt

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

---------

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -8,6 +8,9 @@ else
 	IMAGE_DIR := $(abspath $(PWD)/$(IMAGE_DIR))
 endif
 
+current_arch := $(shell uname -m)
+export ARCH ?= $(shell case $(current_arch) in (x86_64) echo "amd64" ;; (i386) echo "386";; (aarch64|arm64) echo "arm64" ;; (armv6*) echo "arm/v6";; (armv7*) echo "arm/v7";; (s390*|riscv*|ppc64le) echo $(current_arch);; (*) echo "UNKNOWN-CPU";; esac)
+
 IMAGE_NAME ?= helloworld
 IMAGE_DEPLOY_NAME ?= "$(IMAGE_NAME)"
 BUILD_TARGETPLATFORM ?= linux/amd64
@@ -26,6 +29,7 @@ endif
 HADOLINT_REPORT ?= "$(IMAGE_DIR)"/hadolint.json
 TEST_HARNESS ?= "$(IMAGE_DIR)"/cst.yml
 DOCKER_BAKE_FILE ?= "$(IMAGE_DIR)"/docker-bake.hcl
+DOCKER_BAKE_TARGET ?= default
 
 ## Image metadatas
 GIT_COMMIT_REV ?= $(shell git log -n 1 --pretty=format:'%h')
@@ -75,9 +79,9 @@ build: ## Build the Docker Image $(IMAGE_NAME) from $(IMAGE_DOCKERFILE)
 	@echo "== Build succeeded"
 
 bake-build: ## Build the Docker Image(s) with dockerbake file
-	@echo "== Building from DockerBake file $(DOCKER_BAKE_FILE)"
-	@docker buildx bake -f "$(DOCKER_BAKE_FILE)" --print
-	@docker buildx bake -f "$(DOCKER_BAKE_FILE)"
+	@echo "== Building ${DOCKER_BAKE_TARGET} target from DockerBake file $(DOCKER_BAKE_FILE)"
+	@make show
+	@docker buildx bake -f "$(DOCKER_BAKE_FILE)" "$(DOCKER_BAKE_TARGET)"
 	@echo "== Build succeeded"
 
 
@@ -91,11 +95,22 @@ test: ## Execute the test harness on the Docker Image
 	container-structure-test test --driver=docker --image="$(IMAGE_NAME)" --config="$(call FixPath,$(TEST_HARNESS))"
 	@echo "== Test succeeded"
 
-bake-test: ## Execute the test harness on the Docker Image with load
+show: ## Show the output of docker buildx bake --print
+	@docker buildx bake -f "$(DOCKER_BAKE_FILE)" "$(DOCKER_BAKE_TARGET)" --print
+
+list: ## List the first tag of each target including the same platform than the current architecture, with "/" replaced by "#"
+	@set -x; make --silent show | jq -r '.target | to_entries[] | select(.value.platforms[] | contains("linux/$(ARCH)")) | .value.tags[0] | gsub("/"; "#")'
+
+bake-test: ## Execute the test harness on the Docker image(s) with load
 	@echo "== Load $(IMAGE_NAME) within docker engine from docker bake buildx engine"
-	@docker buildx bake -f "$(call FixPath,$(DOCKER_BAKE_FILE))" --set "*.platform=linux/$(shell dpkg --print-architecture)"  --load
-	@echo "== Test $(IMAGE_NAME) with $(call FixPath,$(TEST_HARNESS)) from $(IMAGE_NAME) with container-structure-test:"
-	container-structure-test test --driver=docker --image="$(IMAGE_NAME)" --config="$(call FixPath,$(TEST_HARNESS))"
+	@make show
+	@docker buildx bake -f "$(call FixPath,$(DOCKER_BAKE_FILE))" "$(DOCKER_BAKE_TARGET)" --set "*.platform=linux/$(ARCH)"  --load
+	@make --silent list | while read image; do make --silent "bake-test-$${image}"; done
+	@echo "== All tests succeeded"
+
+bake-test-%: ## Execute the test harness on the tag of an image
+	@echo "== Test $(subst #,/,$*) with $(call FixPath,$(TEST_HARNESS)) from $(IMAGE_NAME) with container-structure-test:"
+	container-structure-test test --driver=docker --image="$(subst #,/,$*)" --config="$(call FixPath,$(TEST_HARNESS))"
 	@echo "== Test succeeded"
 
 ## This steps expects that you are logged to the Docker registry to push image into
@@ -106,7 +121,7 @@ deploy: ## Tag and push the built image as specified by $(IMAGE_DEPLOY).
 	@echo "== Deploy succeeded"
 
 bake-deploy:  ## Tag and push the built image as specified by docker bake file
-	@echo "== Deploying with docker bake file"
-	@docker buildx bake -f "$(call FixPath,$(DOCKER_BAKE_FILE))" --push
+	@echo "== Deploying $(DOCKER_BAKE_TARGET) target with docker bake file"
+	@docker buildx bake -f "$(call FixPath,$(DOCKER_BAKE_FILE))" "$(DOCKER_BAKE_TARGET)" --push
 
 .PHONY: all clean lint build test deploy
