chore: add jenkinsfile_updatecli and infra.ci

--- a/updatecli/values.yaml
+++ b/updatecli/values.yaml
@@ -2,163 +2,6 @@ github:
   user: "jenkins-infra-updatecli"
   email: "178728+jenkins-infra-updatecli[bot]@users.noreply.github.com"
   token: "UPDATECLI_GITHUB_TOKEN"
-  branch: "main"
+  branch: "master"
   owner: "jenkins-infra"
-  repository: "helm-charts"
-
----
-
-if (env.BRANCH_IS_PRIMARY) {
-    updatecli(action: 'apply', cronTriggerExpression: '@hourly')
-} else {
-    updatecli(action: 'diff')
-}
-
----
-
-children:
-  aws:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  azure:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  azure-net:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  contributor-spotlight:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  cloudflare:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  datadog:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  digitalocean:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-404:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-builder:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-confluence-data:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-geoipupdate:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-inbound-agents:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-jenkins-infraci:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-jenkins-lts:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-jenkins-weeklyci:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-ldap:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-matomo:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-mirrorbits:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-openvpn:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-packaging:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  docker-rsyncd:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  fastly:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  helm-charts:
-    name: Helm Charts
-    description: Custom Helm Charts of the Jenkins Infra
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  infra-reports:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  jenkins-contribution-stats:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  jenkins-infra:
-    name: Puppet (jenkins-infra)
-    jenkinsfilePath: Jenkinsfile_updatecli
-    branchIncludes: "production staging updatecli_* PR-* main"
-    disableTagDiscovery: true
-    credentials:
-      packer-aws-access-key-id:
-        description: AWS API key for the user packer
-        secret: "${PACKER_AWS_ACCESS_KEY_ID}"
-      packer-aws-secret-access-key:
-        description: AWS Secret key for the user packer
-        secret: "${PACKER_AWS_SECRET_ACCESS_KEY}"
-  jenkins-version:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  jenkins.io:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  kubernetes-management:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-    credentials:
-      updatecli-azure-serviceprincipal:
-        azureEnvironmentName: "Azure"
-        clientId: "${PACKER_AZURE_CLIENT_ID}"
-        clientSecret: "${PACKER_AZURE_CLIENT_SECRET_VALUE}"
-        description: "Azure Service Principal credential used by updatecli"
-        subscriptionId: "${JENKINSINFRA_AZURE_SECONDARY_SUBSCRIPTION_ID}"
-        tenant: "${PACKER_AZURE_TENANT_ID}"
-  packer-images:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-    credentials:
-      updatecli-aws-access-key-id:
-        description: AWS API key for the user updatecli
-        secret: "${UPDATECLI_AWS_ACCESS_KEY_ID}"
-      updatecli-aws-secret-access-key:
-        description: AWS Secret key for the user updatecli
-        secret: "${UPDATECLI_AWS_SECRET_ACCESS_KEY}"
-      updatecli-azure-serviceprincipal:
-        azureEnvironmentName: "Azure"
-        clientId: "${UPDATECLI_AZURE_CLIENT_ID}"
-        clientSecret: "${UPDATECLI_AZURE_CLIENT_SECRET}"
-        description: "Azure Service Principal credential used by updatecli"
-        subscriptionId: "${JENKINSINFRA_AZURE_SECONDARY_SUBSCRIPTION_ID}"
-        tenant: "${UPDATECLI_AZURE_TENANT_ID}"
-  release:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  shared-tools:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  stats.jenkins.io:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  status:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-  terraform-aws-sponsorship:
-    jenkinsfilePath: Jenkinsfile_updatecli
-    disableTagDiscovery: true
-    credentials:
-      updatecli-aws-access-key-id:
-        description: AWS API key for the user updatecli
-        secret: "${UPDATECLI_AWS_ACCESS_KEY_ID}"
-      updatecli-aws-secret-access-key:
-        description: AWS Secret key for the user updatecli
-        secret: "${UPDATECLI_AWS_SECRET_ACCESS_KEY}"
+  repository: "pipeline-library"
